cluster/apps/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    gethomepage.dev/description: n8n Workflow Automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Automation
    gethomepage.dev/icon: sh-n8n
    gethomepage.dev/name: n8n
    gethomepage.dev/pod-selector: app.kubernetes.io/name=n8n
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway
  hostnames:
    - n8n.internal.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: n8n
          port: 80
          weight: 1
