cluster/apps/n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: n8n Workflow Automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Automation
    gethomepage.dev/icon: sh-n8n
    gethomepage.dev/name: n8n
    gethomepage.dev/pod-selector: app.kubernetes.io/name=n8n
spec:
  ingressClassName: internal
  tls:
    - hosts:
      - n8n.internal.gustend.net
      secretName: n8n-internal-gustend-net-cert
  rules:
    - host: n8n.internal.gustend.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
